.travis.yml modifié

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ script:
   - mdbook --version
   - mdbook build
   - mdbook test
+notifications:
+  email:
+    on_success: never
+    on_failure: always
